--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "typescript": "5.0.2"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "express": "^4.18.2"
