--- a/backend/package.json
+++ b/backend/package.json
@@ -26,5 +26,8 @@
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "express": "^4.18.2"
+  },
+  "rules": {
+    "@typescript-eslint/no-misused-promises": "off"
   }
 }
